--- a/base_app/web/index.html
+++ b/base_app/web/index.html
@@ -40,6 +40,12 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <!-- Adicione isso no seu index.html -->
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-analytics.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+<!-- remote config -->
+<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-remote-config.js"></script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
